fixed css formating and whitespace conflict

--- a/css/index.css
+++ b/css/index.css
@@ -23,32 +23,39 @@ vertical-align: baseline;
 html{
     font-size:62.5%;
 }
+
 body{
     font-size:1.6rem;
     line-height: 1.5;
     font-family: 'Raleway', sans-serif;	
 }
+
 h1, p, .name, .bio {	
     font-family: 'Raleway', sans-serif;	
     text-align: center;	
     margin: 4%;	
-}	
+}
+
 h1{
     font-size:6rem;
     margin:0;
 }
+
 a {	
     text-decoration: none;	
     color: black;
     font-size:2.5rem;	
 }	
+
 a:hover {	
     font-weight: bold;	
 }	
+
 .name{	
     font-size: 150%;	
     font-weight: 200;	
 }	
+
 img {	
     height:39rem;	
     object-fit: cover;	
@@ -59,6 +66,7 @@ img {
     margin-right: auto;	
     border-radius: 2%;	
 }	
+
 img:hover {	
     opacity: 80%;	
 }	
@@ -68,15 +76,18 @@ header{
     display:flex;
     justify-content: center;
 }
+
 nav{
     width:30%;
     display:flex;
     justify-content:space-evenly;
     margin-top:5%;
 }
+
 nav a{
     color:#626262;
 }
+
 nav span{
     border-left:3px solid #626262;
 
@@ -99,12 +110,15 @@ nav span{
     height:60vh;
     margin:5% 0;
 }	
+
 .title-container div:hover {	
     opacity: 80%;	
 }	
+
 .title-container hr{
     width:80%;
 }
+
 button{
     padding:1% 3%;
     font-size: 1.6rem;
@@ -113,6 +127,7 @@ button{
     box-shadow: 2px 2px 1px #626262;
     transition: 2s;
 }
+
 button:hover{
     background-color:#626262;
     border:2px solid white;
@@ -131,6 +146,7 @@ button:hover{
     width:40%;
     text-align:center;
 }
+
 .artist img{
     width:100%;
 }
@@ -149,10 +165,15 @@ button:hover{
         margin-right: auto;
         height: 20rem;
     }
-   
+    
     h1 {
         font-size: 5rem;
         margin: 0;
+    }
+
+    nav a{
+        font-size: 2rem;
+        padding: 2rem;
     }
 }
 
@@ -174,14 +195,21 @@ button:hover{
 
     .title-container div{
         width: 100%;
-    height: 88%;
-    margin: 7% 0 7% 0;
-    padding: 22%;
-    background-size: cover;
+        height: 88%;
+        margin: 7% 0 7% 0;
+        padding: 22%;
+        background-size: cover;
     }
 
     h1 {
-    font-size: 4rem;
-    margin: 0;
+        font-size: 4rem;
+        margin: 0;
     }
+
+    nav a{
+        font-size: 2rem;
+        padding: 1rem;
+    }
+
+
 }
